# rust-unofficial-valorant-api

./: .gitignore  Cargo.toml
resources/: info.md  status_response_ok.json
resources/v1-account/: ok_example.json
resources/v1-status/: bad_request.json  ok_empty.json  ok_issue.json  ok_maintenance.json
resources/v1-version/: ok_example.json
resources/v1-website/: bad_request.json  ok_example.json
resources/v2-match/: example_id.txt  ok_api_big_example.json  ok_my_big_example.json  ok_my_coach_observer_example.json  ok_my_example.json  ok_my_premier_example.json
resources/v2-store-offers/: ok_example.json
src/: client.rs  errors.rs  lib.rs  types.rs  types_impl.rs  types_serde.rs
tests/: lib.rs  util.rs
tests/client/: get_status.rs  get_v1_account.rs  get_v1_by_puuid_account.rs  get_v1_status.rs  get_v1_version.rs  get_v1_website.rs  get_v2_store_offers.rs  get_version.rs  get_website.rs  mod.rs
tests/responses/: mod.rs  status_response.rs  v1_account_response.rs  v1_status_response.rs  v1_version_response.rs  v1_website_response.rs  v2_store_offers_response.rs  website_response.rs
tests/types/: affinity.rs  card.rs  character.rs  coach.rs  localized.rs  map.rs  map_coordinates.rs  map_location.rs  match_kill.rs  match_kill_assistant.rs  match_kill_weapon_assets.rs  match_metadata.rs  match_metadata_premier_info.rs  match_players.rs  match_round.rs  match_round_defuse_event.rs  match_round_event_by.rs  match_round_plant_event.rs  match_round_player_stats.rs  match_round_player_stats_ability_casts.rs  match_round_player_stats_damage_event.rs  match_round_player_stats_economy.rs  match_round_player_stats_economy_armor.rs  match_round_player_stats_economy_armor_assets.rs  mod.rs  mode.rs  observer.rs  (+38 more)
