[package]
name = "unofficial_valorant_api"
version = "0.1.0"
authors = ["Frederik Enste <frederik@fenste.de>"]
edition = "2021"
rust-version = "1.72"
publish = false

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
unicase = "2.7.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std", "std_rng"] }
serde_json = "1.0.107"
