[package]
name = "unofficial_valorant_api"
version = "0.1.0"
authors = ["Frederik Enste <frederik@fenste.de>"]
edition = "2021"
rust-version = "1.72"
publish = false

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
unicase = "2.7.0"

[dev-dependencies]
env_logger = "0.10.0"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
